--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "blueimp-load-image": "^5.16.0",
     "framer-motion": "^7.6.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/blueimp-load-image": "^5.16.0",
     "@types/node": "^18.11.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
